refactor: 주석 대신 명시적인 코드로 수정